objects/gvp__Find_Accounts_Throttle__mdt.object
<CustomObject>
    <description>On the Find Accounts Visualforce page, this record will allow the setting of a dynamic limit on the number of records allowed back on various queries.  This also toggles if related account records should automatically be updated after records are assigned.</description>
    <fields>
        <fullName>gvp__Batch_Account_Sets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If adding account sets, use batch processing (place holder, currently not implemented)</description>
        <label>Batch Account Sets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Batch_Objectives__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If adding objectives, use batch processing</description>
        <label>Batch Objectives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Batch_Sale_Goals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If adding sales goals, use batch processing (place holder, currently not implemented)</description>
        <label>Batch Sale Goals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Batch_Surveys__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If adding surveys, use batch processing</description>
        <label>Batch Surveys</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Bypass_Users__c</fullName>
        <description>When using &quot;Find Accounts&quot;, the results will sometimes create records where the Salesperson is actually the Account Owner, due to no matching Account Team record.  In order to suppress these records, you can add a comma separated list of User IDs that this field to skip these records.</description>
        <label>Bypass Users</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gvp__Query_Limit__c</fullName>
        <defaultValue>2000</defaultValue>
        <description>When quering results, limit the number of records that can be returned / assigned.</description>
        <label>Query Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Update_Accounts__c</fullName>
        <defaultValue>true</defaultValue>
        <description>After assigning records, update all related Accounts.  (Usually used for Mobile for syncing purposes)</description>
        <label>Update Accounts</label>
        <type>Checkbox</type>
    </fields>
    <label>Find Accounts Throttle</label>
    <pluralLabel>Find Accounts Throttle</pluralLabel>
</CustomObject>